--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "main": "index.js",
   "scripts": {
     "android": "react-native run-android",
+    "postinstall": "remotedev-debugger — hostname localhost — port 5678 — injectserver",
     "ios": "react-native run-ios",
     "web": "expo start --web",
     "start": "react-native start",
     "test": "jest"
   },
+  "remotedev": {
+    "hostname": "localhost",
+    "port": 5678
+  },
   "dependencies": {
+    "axios": "^0.19.2",
     "expo": "~37.0.3",
     "expo-splash-screen": "^0.2.3",
     "expo-updates": "~0.2.0",
@@ -15,16 +21,24 @@
     "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-loading-spinner-overlay": "^1.1.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-screens": "~2.2.0",
     "react-native-unimodules": "~0.9.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "babel-jest": "~25.2.6",
     "jest": "~25.2.6",
-    "react-test-renderer": "~16.9.0"
+    "react-test-renderer": "~16.9.0",
+    "redux-logger": "^3.0.6",
+    "remote-redux-devtools": "^0.5.16",
+    "remotedev-rn-debugger": "^0.8.4"
   },
   "jest": {
     "preset": "react-native"
